--- a/index.html
+++ b/index.html
@@ -1,11 +1,60 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-</head>
-<body>
-  
-</body>
+  <head>
+    <!-- pre-connect fonts -->
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <title>Portifólio</title>
+
+    <!-- fonts link -->
+    <link rel="stylesheet" href="style.css" />
+
+    <script src="main.js/js" type="module" defer></script>
+  </head>
+  <body>
+    <div id="app">
+      <header>
+        <svg width="53" height="50" viewBox="0 0 53 50" fill="none" xmlns="http://www.w3.org/2000/svg">
+          <path d="M52.2346 30.0252L44.3522 27.0082L40.6154 24.8932L44.8294 22.5392L52.2444 19.6329C52.5701 19.5044 52.8218 19.2492 52.935 18.9328C53.0482 18.6164 53.0124 18.2683 52.8357 17.9789L45.8174 6.45404C45.7312 6.31234 45.6143 6.18961 45.4745 6.09399C45.3346 5.99838 45.175 5.93206 45.0062 5.89939C44.6665 5.83131 44.3098 5.9071 44.0296 6.10514L37.54 10.6995L33.3723 13.028V8.24025L34.3139 1.3089C34.3587 0.97858 34.2511 0.644386 34.0198 0.393742C33.9051 0.269951 33.7638 0.170826 33.6056 0.102932C33.4473 0.0350342 33.2756 -5.72205e-05 33.1019 0H19.3032C18.9546 0 18.6223 0.141567 18.3902 0.38834C18.2757 0.51083 18.1897 0.654926 18.1379 0.811169C18.0861 0.967415 18.0697 1.1323 18.0897 1.295L18.9139 8.00662V12.7758L15.1112 10.5927L8.85768 6.10903C8.57669 5.90712 8.21913 5.82899 7.87461 5.89939C7.53009 5.96669 7.23281 6.17245 7.05933 6.46254L0.159974 17.9859C-0.0110642 18.2721 -0.0469068 18.6133 0.0622319 18.9242C0.171371 19.2368 0.414089 19.4905 0.730917 19.6228L7.45435 22.4232L11.8435 24.7842L6.73109 27.5815L0.719513 30.1567C0.563796 30.2235 0.424515 30.3205 0.310619 30.4415C0.196722 30.5625 0.110729 30.7047 0.0581655 30.8592C-0.0469008 31.1717 -0.00862601 31.5128 0.164856 31.7975L7.06503 43.0957C7.24177 43.3858 7.5423 43.5893 7.88926 43.6527C8.23541 43.7162 8.59378 43.6349 8.87233 43.4276L14.7577 39.0677L18.9139 36.7462V41.4341L18.0888 48.7158C18.0514 49.0431 18.163 49.3703 18.3943 49.6148C18.6256 49.8608 18.9563 50 19.3032 50H33.1019C33.4513 50 33.7836 49.8584 34.0158 49.6109C34.2479 49.3618 34.3562 49.0322 34.3155 48.7035L33.3723 41.2012V36.6038L38.1362 39.1899L44.0207 43.4369C44.2984 43.638 44.6535 43.7138 44.998 43.6512C45.3409 43.5862 45.6382 43.385 45.815 43.0988L52.8332 31.6869C53.0124 31.3952 53.0491 31.0448 52.9342 30.7261C52.8772 30.5685 52.7852 30.4244 52.6645 30.3035C52.5438 30.1826 52.3972 30.0877 52.2346 30.0252Z" fill="black"/>
+          </svg>
+          
+
+        <nav>
+          <ul>
+            <li>
+              <a href="">Home</a>
+            </li>
+            <li>
+              <a href="">AboutMe</a>
+            </li>
+            <li>
+              <a href="">Projects</a>
+            </li>
+            <li>
+              <a href="">Skills</a>
+            </li>
+            <li>
+              <a href="">TalkToMe</a>
+            </li>
+          </ul>
+        </nav>
+      </header>
+
+      <main>
+        <section class="hero">
+          <img src="" alt="" />
+          <h1>My name isSamuuh.</h1>
+
+          <h2>
+            Web developer and music lover.<br>
+            A lifelong learner passionate about art and technology!<br>
+            Welcome to my world!
+          </h2>
+           
+          <p></p>
+        </section>
+      </main>
+    </div>
+  </body>
 </html>
