--- a/index.html
+++ b/index.html
@@ -61,16 +61,16 @@
             <div class="hero-skills">
               <ul>
                 <li>
-                  <img src="" alt="logo HTML">
+                  <img src="./assets/html (1).png" alt="logo HTML">
                 </li>
                 <li>
-                  <img src="" alt="logo CSS">
+                  <img src="./assets/css-3 (1).png" alt="logo CSS">
                 </li>
                 <li>
-                  <img src="" alt="logo JavaScript">
+                  <img src="./assets/java-script.png" alt="logo JavaScript">
                 </li>
                 <li>
-                  <img src="" alt="Logo React">
+                  <img src="./assets/atom.png" alt="Logo React">
                 </li>
               </ul>
             </div>
