--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
           </li>
           <li>
             <a href="https://github.com/samuuhzica" target="_blank">
-              
+
               <svg
               width="46"
               height="45"
@@ -135,10 +135,10 @@
           </li>
         </ul>
 
-        <nav>
+        <nav class="nav-bar">
           <ul>
             <li>
-              <a href="">Home</a>
+              <a href="" target="_blank">Home</a>
             </li>
             <li>
               <a href="">AboutMe</a>
